[tool.poetry]
name = "articubench"
version = "0.3.5"
description = "articubench - An Articulatory Speech Synthesis Benchmark"
authors = ["Konstantin (Tino) Sering <konstantin.sering@uni-tuebingen.de>",
	   "André Märtins <andre99dercoole@gmail.com>",
           "Paul Schmidt-Barbo",]
license = "GPLv3+"
readme = "README.rst"

repository = "https://github.com/quantling/articubench"
homepage = "https://articubench.readthedocs.io/en/latest/"

classifiers = ['Development Status :: 3 - Alpha',
               'Environment :: Console',
               'Intended Audience :: Science/Research',
               'Operating System :: POSIX :: Linux',
               'Operating System :: MacOS',
               'Operating System :: Microsoft :: Windows',
               'Topic :: Scientific/Engineering',
               'Topic :: Scientific/Engineering :: Artificial Intelligence',
               'Topic :: Scientific/Engineering :: Information Analysis',]

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
torch = ">=1.7.0"
numpy = ">=1.23.1"
pandas = ">=1.5.3"
soundfile = ">=0.11"
librosa = ">=0.9.0"
tqdm = ">=4.65.0"
matplotlib = ">=3.7.1"
praatio = ">=6.0.0"
pylint = ">=2.16.3"
paule = ">=0.3.6"
llvmlite = ">=0.42.0"
setuptools = ">=69.1.0"
resampy = ">=0.4.2"
opencv-python = ">=4.11"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.2.2"
pytest-cov = ">=4.0.0"
pycodestyle = ">=2.10.0"
Sphinx = ">=6.1.3"
sphinx-rtd-theme = ">=1.2.0"
numpydoc = ">=1.5.0"
sphinx-copybutton = ">=0.5.1"

[tool.pytest.ini_options]
addopts = '--doctest-glob "*.rst"'

[tool.pylint]
  [tool.pylint.basic]
  good-names = ["nn", "ii", "_", "jj", "df"]

  [tool.pylint.format]
  max-line-length = 120

  [tool.pylint.message_control]
  disable = "E1101"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
